Add documentation for command line options to temporarily read/export/open packages to module readme.md