@@ -159,6 +159,37 @@ Usage with a `jar` or a `.class` file
    jdeps --jdk-internals com.greeter.jar
    jdeps --module-path 'com.client.jar;com.greeter.jar' com.client.jar // -cp or --classpath does not work here since the com.client requires a module com.greeter
 ```
+
+13. There are three command line options applicable to `javac` and `java` that can be used for customizing `exports` and `requires` configurations of modules temporarily (temporarily means only for that particular command execution). 
+
+These are: `add-reads`, `add-exports`, and, `add-opens`. 
+
+For example, if you want `moduleA` to be able to read public packages of `moduleB` and neither of the modules have appropriate information in their respective `module-info` files, then you can use the following commands to enable such access :
+
+```
+javac --add-reads moduleA=moduleB --add-exports moduleB/com.modB.package1=moduleA ...
+java --add-reads moduleA=moduleB --add-exports moduleB/com.modB.package1=moduleA ...
+
+--add-reads moduleA=moduleB implies that moduleA wants to read all exported packages of moduleB.
+--add-exports moduleB/com.modB.package1=moduleA implies that moduleB exports package com.modB.package1 to moduleA.
+
+--add-opens is used to provide access to private members of classes through reflection
+
+javac -d target --module-source-path 'moduleA/src;moduleB/src' \
+      --module com.moduleA,com.moduleB \
+      --add-reads com.moduleA=com.moduleB \
+      --add-exports com.moduleB/com.moduleB.package1=com.moduleA  \
+      --add-opens com.moduleB=com.moduleA #if you want reflection to be used on all packages of B
+      
+Run moduleA
+# Replace com.moduleA.MainClass with the actual main class of moduleA.
+java --module-path target \
+     --module com.moduleA/com.moduleA.MainClass \
+     --add-reads com.moduleA=com.moduleB \
+     --add-exports com.moduleB/com.moduleB.package1=com.moduleA \
+     --add-opens com.moduleB=com.moduleA
+```
+
 ## Key points
 1. **Module declaration** is defined in a file named `module-info.java`.
 2. Compiling the module declaration creates the **module descriptor**, which is stored in a file named `module-info.class` in the module’s root folder.
